...
    <string name="prompt_password">Password</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="new_to_indanze">New to InDanze?</string>
    <string name="sign_in">Sign In</string>
    <string name="password">Password</string>
    <string name="email_address">Email Address</string>
    <string name="sign_up">Sign Up</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="username">Username</string>
    <string name="email_address_sign_up">Email Address</string>
    <string name="password_sign_up">Password</string>
    <string name="sign_up_sign_up">Sign Up</string>
    <string name="already_a_member">Already a member?</string>
...
